# CextEdit

./: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  cextglobals.cpp  cextglobals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  placeholderfile.cpp  placeholderfile.h  preferences.cpp  preferences.h  preferences.ui
